Adjustments made to the index.html and main.css files to solve gradient issues.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
 
             <div class="subsection-colors">
-                <div class="subsection-colors-item one"><img id="imageSide" src="./src/images/colors/design_side_skyblue.jpg" alt="">
+                <div class="subsection-colors-item one"><img id="imageSide" src="./src/images/colors/design_side_skyblue.jpg" alt=""Design Side"">
                 </div>
 
                 <div class="subsection-colors-item two"><img id="imageMagsafe" src="./src/images/colors/design_magsafe_skyblue.jpg" alt="">
