Adjustments to paragraphs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- main -->
     <main class="main">
         <h1 class="main__title">Macbook Air</h1>
-        <p class="main__subtitle gradient-text-blue">Velocidade no ar</p>
+        <p class="main__subtitle gradient-text-blue">Velocidade no ar.</p>
 
         <picture class="main__media">
             <source srcset="./src/images/sections/hero_static__2x_small.png" media="(max-width:743px)">
@@ -29,7 +29,7 @@
             <a href="#"> 
                 <button>Ver preços</button>
             </a>
-            <p class="main__pricing">A partir de 1.083,25/mês ou R$12.999*</p>
+            <p class="main__pricing">A partir de R$1.083,25/mês ou R$12.999*</p>
             <p class="main__availability">Confira em breve a disponibilidade</p>
             <p class="main__language">
                 A Apple Intelligence já está disponível em português do Brasil
@@ -48,7 +48,7 @@
                     </em>
                     Ele é feito para <em>Apple Intelligence</em> e ajuda a resolver a vida sem esforço
                     <sup>
-                        <a href="0" aria-label="Nota de Rodapé #3">1</a>
+                        <a href="#" aria-label="Nota de Rodapé #3">1</a>
                     </sup>
                     E ficou ainda mais encantador na cor azul-céu. O Macbook Air é tão perfeito e tão portátil que vai para qualquer lugar e faz tudo com você.
                 </p>
